<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
        <TextView
        android:id="@+tabs/results_lb_average"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tab_results_lb_average"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+tabs/results_bt_watch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="bt_watch_Click"
        android:text="@string/tab_results_bt_watch" />

    <Button
        android:id="@+tabs/results_csv_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="bt_save_csv_Click"
        android:text="@string/save_csv" />

</LinearLayout>